@@ -1,5 +1,9 @@
 2002-11-10  Andreas Jaeger  <aj@suse.de>
 
+	* sysdeps/unix/sysv/linux/x86_64/sys/ucontext.h (enum): Add
+	REG_OLDMASK and REG_CR2 to synch with kernel header.
+	(NGREG): Increase.
+
 	* nss/getXXent.c (GETFUNC_NAME): Use union type to avoid strict
 	aliasing problem.
 	* nss/getXXbyYY_r.c (INTERNAL): Likewise.
